--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ requires-python = ">=3.10"
 dependencies = [
     "requests==2.31.0",
     "chardet==5.2.0",
+    "openpyxl==3.1.2",
 ]
 
 [dependency-groups]
