--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,8 @@
 [project]
 name = "gsparse"
-version = "0.2.0"
+version = "0.2.1"
 description = "Google Sheets Parser"
+readme = "README.md"
 license = {text = "MIT"}
 authors = [
     {name = "Tsunami43", email = "n3m0_22@mail.ru"}
